--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,11 @@
     <meta name="theme-color" content="#000000" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/35d602e459.js" crossorigin="anonymous"></script>
-    <title>@mel.yoyo</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;500&family=Playfair+Display:ital,wght@0,500;1,500&display=swap" rel="stylesheet">    <title>@mel.yoyo</title>
   </head>
   <body>
     <div id="root"></div>
